# amazon-replenishment-planning-system-codex

./: .env.example  .gitignore  Makefile  README.md  amazon-replenishment-planning-system.md
backend/: pyproject.toml
backend/amazon_replenishment_planner_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py
backend/tests/: test_domain_logic.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  mockData.ts  styles.css  types.ts
